# luminos-os

./: .gitignore  .mcp.json  AGENTS.md  AGENT_PROTOCOL.md  CLAUDE.md  FOCUS.md  GEMINI.md  HIVE_ARCHITECTURE.md  HIVE_README.md  LUMINOS_AGENT_PROMPT.md  LUMINOS_BUG_LOG.md  LUMINOS_DECISIONS.md  LUMINOS_DESIGN_SYSTEM.md  LUMINOS_MASTER_FILE.md  LUMINOS_MIGRATION_PLAN.md  LUMINOS_PHASES_5_TO_6.md  LUMINOS_PROJECT_SCOPE.md  LUMINOS_STATUS.md  PENDING_RESTART.md  README.md  STATE.md  benchmark_sentinel.py  config.yaml  entities.json  gemini-code-1777263963106.html  go.mod  go.sum  hive_orchestrator.py  mempalace.yaml  requirements.txt  test_options.py  version.py  weight_manifest.json
.antigravitycli/: 50985b26-c695-438d-9681-8885eb513c7b.json
.claude/: settings.json  settings.local.json  settings1.json
agents/: base.py  chat.py  coder.py  vision.py
bugs/: README.md
config/: 99-luminos-ram.conf  adobe-reader-vm.desktop  claude-code-openrouter.json  claude-code-router.json  hive-crash-watcher.path  hive-crash-watcher.service  logrotate-luminos  luminos-brightness.service  luminos-hive-popup.desktop  luminos-hive-settings.desktop  luminos-hive.conf  luminos-keyboard-wake.service  luminos-keyboard.conf  luminos-vm.desktop  luminos-windows.desktop  luminos.conf  sddm-hidpi.conf  starship.toml  (+3 more)
src/kcms/kcm_luminos_hive/: CMakeLists.txt  kcm_luminos_hive.cpp  kcm_luminos_hive.json
src/kcms/kcm_luminos_hive/ui/: main.qml
src/kcms/kcm_luminos_keyboard/: CMakeLists.txt  kcm_luminos_keyboard.cpp  kcm_luminos_keyboard.json
src/kcms/kcm_luminos_keyboard/ui/: main.qml
(+426 files in other folders)
